[gd_scene load_steps=2 format=3 uid="uid://cajwrijcg2n1h"]

[ext_resource type="Script" path="res://PraxisMapper/Controls/DebugMovement.gd" id="1_1g2xv"]

[node name="DebugMovement" type="Node2D"]
script = ExtResource("1_1g2xv")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="GoWest" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 1.0
offset_top = 17.0
offset_right = 14.0
offset_bottom = 24.0
color = Color(1, 0, 0, 1)

[node name="GoNorth" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 12.0
offset_top = 2.0
offset_right = 25.0
offset_bottom = 9.0
color = Color(1, 0, 0, 1)

[node name="GoSouth" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 13.0
offset_top = 31.0
offset_right = 26.0
offset_bottom = 38.0
color = Color(1, 0, 0, 1)

[node name="GoEast" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 25.0
offset_top = 17.0
offset_right = 38.0
offset_bottom = 24.0
color = Color(1, 0, 0, 1)
